objects/Account_Team_Proxy__c.object
<CustomObject>
    <fields>
        <fullName>Account_Access__c</fullName>
        <label>Account Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read Only</fullName>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_RecType_DeveloperName__c</fullName>
        <formula>Account__r.RecordType.DeveloperName</formula>
        <label>Account Record Type DeveloperName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Role_ID__c</fullName>
        <label>Account Role ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Short_Name__c</fullName>
        <description>This field is sent to Martinistore.</description>
        <formula>Account__r.Short_Name__c</formula>
        <label>Account Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Team Proxy</relationshipLabel>
        <relationshipName>Account_Team_Proxy</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Accounts_Owner__c</fullName>
        <formula>Account__r.OwnerId</formula>
        <label>Accounts Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Sync_Id__c</fullName>
        <description>Used by the batch process to send the outbound message. Updated by the batch process only.</description>
        <label>Batch Sync Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Access__c</fullName>
        <label>Case Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read Only</fullName>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_HCM_Login_ID__c</fullName>
        <formula>CreatedBy.HCM_Login_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By HCM Login ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fab_Assignment_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag used to track if User has edited the Fab Assigned on Account Proxy</description>
        <label>Fab Assignment Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fab_Assignment__c</fullName>
        <label>Fab Assignment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAB 1</fullName>
                </value>
                <value>
                    <fullName>FAB 2</fullName>
                </value>
                <value>
                    <fullName>FAB 3</fullName>
                </value>
                <value>
                    <fullName>FAB 3E</fullName>
                </value>
                <value>
                    <fullName>FAB 5</fullName>
                </value>
                <value>
                    <fullName>FAB 6</fullName>
                </value>
                <value>
                    <fullName>FAB 7</fullName>
                </value>
                <value>
                    <fullName>FAB 8</fullName>
                </value>
                <value>
                    <fullName>FAB 9</fullName>
                </value>
                <value>
                    <fullName>FAB 10</fullName>
                </value>
                <value>
                    <fullName>FAB 11</fullName>
                </value>
                <value>
                    <fullName>ALTIS</fullName>
                </value>
                <value>
                    <fullName>ASIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fab_Deleted__c</fullName>
        <label>Fab Deleted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fab_Deletion_Sync_Status__c</fullName>
        <label>Fab Deletion Sync Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_for_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Once checked the system will delete the team member from Siebel and remove access from the Salesforce account team</description>
        <label>Flag for Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCM_Login_ID__c</fullName>
        <description>Formula field with the HCM Login ID on the User record</description>
        <formula>User__r.HCM_Login_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HCM Login ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAccountOwner__c</fullName>
        <description>if (current user == account owner) then
  TRUE  else FALSE</description>
        <formula>IF(Account__r.OwnerId = User__r.Id , &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsAccountOwner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_FAE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is FAE ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Martinistore_Sync_Status__c</fullName>
        <description>AIA integratino updates this field with  ERROR or SUCCESS status from Martinistore procedure.</description>
        <label>Martinistore Sync Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_By_HCM_Login_ID__c</fullName>
        <formula>LastModifiedBy.HCM_Login_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modified By HCM Login ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Access__c</fullName>
        <label>Opportunity Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read Only</fullName>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_Account_ID__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <label>Sequence No</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Siebel_Account_ID__c</fullName>
        <formula>IF(isNull(Account__r.Siebel_Account_ID__c), Account__c, Account__r.Siebel_Account_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Siebel Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Account_Role_ID__c</fullName>
        <externalId>true</externalId>
        <label>Siebel Account Role ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Error_Message__c</fullName>
        <description>Used to track the error in the response to a synchronization to Siebel.  This is only used by the integration and is invisible to the user.</description>
        <label>Siebel Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Siebel_Operation__c</fullName>
        <formula>IF( ISBLANK(  Siebel_Account_ID__c ), &quot;insert&quot;,
      IF(!Flag_for_Delete__c, &quot;update&quot;, &quot;delete&quot;)
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Siebel Operation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Role__c</fullName>
        <description>Will convert the team roles to the Roles required by Siebel:
Will strip out the leading &quot;Primary &quot; or &quot;Backup &quot; text from the Role</description>
        <formula>SUBSTITUTE(SUBSTITUTE( SUBSTITUTE(SUBSTITUTE( TEXT(Team_Role__c) , &quot;Field Application Engineer&quot;, &quot;Field Application Engineer&quot;), &quot;Field Application Engineer&quot;, &quot;Field Engineer&quot;) , &quot;Primary &quot;, &quot;&quot;) , &quot;Backup &quot;, &quot;&quot;)</formula>
        <label>Siebel Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Sent_DateTime__c</fullName>
        <label>Siebel_Sent_DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Siebel_Sequence__c</fullName>
        <description>Set the Siebel sequence - based on the Team Role,
If Team role contains &quot;Primary&quot; then set to &quot;1&quot;
If Team role contains &quot;Backup&quot; then set to &quot;2&quot;
else set to blank</description>
        <formula>IF(CONTAINS( TEXT(Team_Role__c) , &quot;Primary&quot;),&quot;1&quot;, &quot;&quot;)   &amp; IF(CONTAINS( TEXT(Team_Role__c) , &quot;Backup&quot;),&quot;2&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Siebel Sequence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Status__c</fullName>
        <description>Use by the Siebel integration outbound message and inbound response to indicate the at status of the last integration sync.  This field is only used for integration and is invisible to the user.</description>
        <label>Siebel Status Message</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SENT</fullName>
                </value>
                <value>
                    <fullName>SUCCESS</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Siebel_Sync_ID__c</fullName>
        <description>Used by integration to ensure synchronization is complete.  Unique id for each message sent.   
AIA will return the value in this field in the response.</description>
        <label>Siebel Sync ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synch_to_Downstream__c</fullName>
        <label>Synch to Downstream</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <label>Team Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Administrator</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Backup Customer Service Rep</fullName>
                </value>
                <value>
                    <fullName>Business Planner</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Channel Manager</fullName>
                </value>
                <value>
                    <fullName>Customer Engineer</fullName>
                </value>
                <value>
                    <fullName>Customer Integration</fullName>
                </value>
                <value>
                    <fullName>Customer Service Rep</fullName>
                </value>
                <value>
                    <fullName>Customer Tapeout Engineer</fullName>
                </value>
                <value>
                    <fullName>Customer Quality Engineer</fullName>
                </value>
                <value>
                    <fullName>DE - Customer Support</fullName>
                </value>
                <value>
                    <fullName>DE - Enablements</fullName>
                </value>
                <value>
                    <fullName>DE - IP Technical</fullName>
                </value>
                <value>
                    <fullName>Demand Planner</fullName>
                </value>
                <value>
                    <fullName>Design and Technology Support</fullName>
                </value>
                <value>
                    <fullName>Design Win Team</fullName>
                </value>
                <value>
                    <fullName>DE - Tapeout</fullName>
                </value>
                <value>
                    <fullName>Fab Planner</fullName>
                </value>
                <value>
                    <fullName>Field Application Engineer</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Primary Account Manager</fullName>
                </value>
                <value>
                    <fullName>Primary Customer Service Rep</fullName>
                </value>
                <value>
                    <fullName>Primary Field Application Engineer</fullName>
                </value>
                <value>
                    <fullName>Product Marketing</fullName>
                </value>
                <value>
                    <fullName>Regional Channel Engineer</fullName>
                </value>
                <value>
                    <fullName>Regional Channel Manager</fullName>
                </value>
                <value>
                    <fullName>Strategic Marketing</fullName>
                </value>
                <value>
                    <fullName>TD PI / YE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Diff__c</fullName>
        <formula>if( CreatedDate == LastModifiedDate ,((NOW() - CreatedDate)*1440)/ 60,((NOW() - LastModifiedDate )*1440)/ 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Team_Proxy1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <formula>User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User: Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_First_Name__c</fullName>
        <description>This field is sent to Martinistore.</description>
        <formula>User__r.FirstName</formula>
        <label>User First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Last_Name__c</fullName>
        <description>This field is sent to Martinistore.</description>
        <formula>User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Preferred_Name__c</fullName>
        <description>This field is sent to Martinistore.</description>
        <formula>User__r.FirstName + &apos; &apos; + User__r.LastName</formula>
        <label>User Preferred Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Team_Proxy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View_History__c</fullName>
        <formula>HYPERLINK(&quot;/_ui/common/history/ui/EntityHistoryFilterPage?id=&quot; &amp;  Id , &quot;View History&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View History</label>
        <type>Text</type>
    </fields>
    <label>Account Team Proxy</label>
    <listViews>
        <fullName>All_test</fullName>
        <columns>NAME</columns>
        <columns>Account_Role_ID__c</columns>
        <columns>User__c</columns>
        <columns>Siebel_Account_Role_ID__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity_Access__c</columns>
        <columns>Salesforce_Account_ID__c</columns>
        <columns>Sequence_No__c</columns>
        <columns>Siebel_Account_ID__c</columns>
        <columns>Siebel_Operation__c</columns>
        <columns>Siebel_Error_Message__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Siebel_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All test</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Asim_Test_view_ap</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>12/7/2017 12:00 AM</value>
        </filters>
        <label>Asim Test view ap</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Checkteamfail</fullName>
        <booleanFilter>(1 OR 3 OR 4 ) and 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Access__c</columns>
        <columns>Siebel_Operation__c</columns>
        <columns>Case_Access__c</columns>
        <columns>Opportunity_Access__c</columns>
        <columns>Siebel_Error_Message__c</columns>
        <columns>Siebel_Role__c</columns>
        <columns>Siebel_Sequence__c</columns>
        <columns>Siebel_Status__c</columns>
        <columns>Siebel_Sync_ID__c</columns>
        <columns>Siebel_Account_ID__c</columns>
        <columns>Siebel_Account_Role_ID__c</columns>
        <columns>Fab_Deletion_Sync_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Siebel_Status__c</field>
            <operation>notEqual</operation>
            <value>SUCCESS</value>
        </filters>
        <filters>
            <field>Fab_Deletion_Sync_Status__c</field>
            <operation>notEqual</operation>
            <value>SUCCESS</value>
        </filters>
        <filters>
            <field>Siebel_Status__c</field>
            <operation>notEqual</operation>
            <value>SUCCESS</value>
        </filters>
        <filters>
            <field>Siebel_Error_Message__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>CheckTeamFailes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Checkteamfailes</fullName>
        <booleanFilter>(1 or 2) AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Access__c</columns>
        <columns>Siebel_Operation__c</columns>
        <columns>HCM_Login_ID__c</columns>
        <columns>User__c</columns>
        <columns>Opportunity_Access__c</columns>
        <columns>Siebel_Error_Message__c</columns>
        <columns>Siebel_Role__c</columns>
        <columns>Siebel_Sequence__c</columns>
        <columns>Siebel_Status__c</columns>
        <columns>Siebel_Sync_ID__c</columns>
        <columns>Siebel_Account_ID__c</columns>
        <columns>Siebel_Account_Role_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Siebel_Operation__c</field>
            <operation>equals</operation>
            <value>insert</value>
        </filters>
        <filters>
            <field>Siebel_Operation__c</field>
            <operation>equals</operation>
            <value>update</value>
        </filters>
        <filters>
            <field>Flag_for_Delete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Siebel_Error_Message__c</field>
            <operation>notEqual</operation>
            <value>Operation Completed Successfully!</value>
        </filters>
        <filters>
            <field>Siebel_Role__c</field>
            <operation>notEqual</operation>
            <value>Buyer</value>
        </filters>
        <label>CheckTeamFailures</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Check_View</fullName>
        <columns>NAME</columns>
        <columns>HCM_Login_ID__c</columns>
        <columns>User_First_Name__c</columns>
        <columns>User_Last_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Team_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>ABB SWITZERLAND LTD.</value>
        </filters>
        <filters>
            <field>Team_Role__c</field>
            <operation>contains</operation>
            <value>Primary Customer Service Rep,Backup Customer Service Rep,Customer Service Rep</value>
        </filters>
        <label>My Check View</label>
    </listViews>
    <nameField>
        <displayFormat>ATP-{000000}</displayFormat>
        <label>ATP Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Team Proxy</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CE_FB_Fab_Assignment_Mandatory</fullName>
        <active>false</active>
        <description>Team Role as Customer Engineer and Fab Planner should not have Fab Assignment as Null.</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(Team_Role__c,&apos;Customer Engineer&apos;),ISPICKVAL(Team_Role__c,&apos;Fab Planner&apos;)),ISNULL(Fab_Assignment__c))</errorConditionFormula>
        <errorMessage>Customer Engineer and Fab Planner Users must atleast have one Fab assigned</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IBM_Account_Team_Read_Only</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
      NOT(OR($Profile.Name = &apos;System Administrator&apos;,$Profile.Name = &apos;GF System Admin&apos;,$Profile.Name = &apos;GF Integration&apos;)),
      Account__r.RecordType.Name = &apos;IBM Account&apos;,
      OR(
           ISNEW(),
           NOT(ISNEW())
      )
)</errorConditionFormula>
        <errorMessage>Account Team under IBM accounts can&apos;t be created or updated</errorMessage>
    </validationRules>
</CustomObject>